--- a/src/frontend/src/styles/Home.scss
+++ b/src/frontend/src/styles/Home.scss
@@ -98,7 +98,7 @@
 
 .releasesList {
   h2 {
-    background-color: blue;
+    // background-color: blue;
     color: white;
     text-align: center;
     padding-left: 5px;
