--- a/src/frontend/src/styles/Paul.scss
+++ b/src/frontend/src/styles/Paul.scss
@@ -1,12 +1,40 @@
-.paulAbout{
-    margin-left: 13%;
-    margin-right: 10%;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    h3{
-        font-size: 1.5vw;
-        color: #18D5FE;
+@font-face {
+    font-family: myFontLight;
+    src: url("../assets/Oxanium-Light.ttf");
+}
+
+@font-face {
+    font-family: myFontMedium;
+    src: url("../assets/Oxanium-Medium.ttf");
+}
+
+@font-face {
+    font-family: myFontBold;
+    src: url("../assets/Oxanium-Bold.ttf");
+}
+
+.paulMobileBreak{
+    display: none;
+}
+
+.mySkills{
+    display: flex;
+    height: calc(80%);
+    width: 100%;
+    margin: auto;
+    flex-wrap: wrap;
+    img {
+        height: 8vw;
+        margin: auto;
+        min-height: 65px;
     }
+}
+
+.paulAbout{
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-bottom: 5%;
+    font-family: myFontLight;
     p{
         font-size: 1.5vw;
     }
@@ -15,11 +43,75 @@
     }
 }
 
+.paulContact{
+    text-align: center;
+    justify-content: center;
+    margin-left: 10%;
+    margin-right: 10%;
+    p{
+        font-family: myFontLight;
+        font-size: 1.5vw;
+    }
+    table{
+        margin: auto;
+    }
+    tr{
+        border-bottom: 3px solid black;
+    }
+    svg{
+        font-size: 5vw;
+    }
+    .paulTableText{
+        font-size: 19px;
+        vertical-align: middle;
+    }
+    a{
+        text-decoration: none;
+        //color: black;
+        font-family: myFontlight;
+    }
+}
+
+.paulContainer{
+    button{
+        background-color: transparent;
+        border: none;
+    }
+}
+
+.paulExperience{
+    margin-left: 10%;
+    margin-right: 10%;
+    a{
+        color: #18D5FE;
+    }
+    h1{
+        font-size: 2vw;
+        font-family: myFontBold;
+    }
+    h2{
+        font-size: 1.8vw;
+        font-family: myFontBold;
+    }
+    h3{
+        font-size: 1.65vw;
+        font-family: myFonyMedium;
+    }
+    p, li{
+        font-size: 1.5vw;
+        font-family: myFontLight;
+    }
+    ul{
+        list-style-type: circle;
+    }
+}
+
 .paulHeader{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 3%;
+    padding-top: 3%;
+    background-color: #18D5FE;
     h1{
         font-size: 3vw;
         font-size-adjust: .5;
@@ -33,33 +125,42 @@
 
 .paulHeaderLeft{
     float: left;
-    margin-left: 10%;
+    padding-left: 15%;
 }
 
-.paulHeaderPhoto{
-    float: right;
-    max-width: 40%;
-    height: 500px;
-    margin-right: 10%;
-    bottom: 0;
+.paulHeaderPhoto {
+    float: none;
+    max-width: 100%;
+    height: auto;
+    margin: 3% 0;
+    padding-right: 15%;
     position: relative;
-
-    img{
-        position: absolute;
-        bottom: 0;
-        left: 50%;
-        transform: translateX(-100%);
+    img {
+        position: static;
+        transform: none;
+        margin: auto;
+        display: block;
+        width: 400px;
+        height: auto;
+        border-radius: 50%;
+        border: 5px solid black;
+        overflow: hidden;
+        background-color: whitesmoke;
     }
 }
 
 .paulHome{
-    background-color: #18D5FE;
-    padding-bottom: 5%;
+    background-color: black;
+    padding-bottom: 3%;
+    font-family: myFontMedium;
 }
 
-.paulLogos{
+.paulLinkedLogos{
     svg{
         font-size: 8em;
+    }
+    img{
+        height: 8em;
     }
     margin: 0 5px;
 }
@@ -67,7 +168,8 @@
 .paulNav{
     text-align: center;
     padding: 10px;
-    // background-color: #FC4C02;
+    background-color: #3db4cf;
+    font-family: myFontBold;
     a{
         text-decoration: none;
         color: black;
@@ -76,6 +178,7 @@
     }
     a:hover{
         color: white;
+        font-weight:bold;
     }
     .mainLogo{
         position: absolute;
@@ -88,10 +191,19 @@
         }
     }
     .paulLogo{
+        display: inline-block;
         position: absolute;
         top: 0;
         left: 0;
-        font-size: 3em;
+        font-size: 1.5vw;
+        padding: 1%;
+    }
+    .paulLogoShort{
+        display: none;
+        position: absolute;
+        top: 0;
+        left: 0;
+        font-size: 2em;
         padding: 1%;
     }
     ul{
@@ -108,5 +220,166 @@
             }
         }
     }
-    
+}
+
+.paulResume{
+    text-align: center;
+    .downloadButton{
+        font-family: myFontBold;
+        font-size: 2vw;
+        color: white;
+        background-color:  black;
+        border-radius: 8px;
+        display: block;
+        margin: auto;
+        width: fit-content;
+        box-shadow: 10px 5px 5px #3db4cf;
+    }
+    a{
+        text-decoration: none;
+        color: white;
+        padding: 5px;
+    }
+}
+
+.paulTitles{
+    font-size: 2vw;
+    color: #18D5FE;
+    font-family: myFontBold;
+    text-align: center;
+    padding-top: 40px;
+}
+
+.paulTechnologies{
+    text-align: center;
+}
+
+@media (max-width: 1090px) {
+    .paulContainer{
+        p{
+            font-size: 19px;
+            margin: 0;
+        }
+    }
+    .paulExperience{
+        h1{
+            font-size: 23px;
+        }
+        h2{
+            font-size: 22px;
+        }
+        h3{
+            font-size: 21px;
+        }
+        li{
+            font-size: 19px;
+        }
+        ul{
+            margin: 10px;
+        }
+    }
+    .paulHeaderLeft{
+        padding-left: 5%;
+        h1{
+            font-size: 35px;
+        }
+        p{
+            font-size: 19px;
+        }
+    }
+    .paulHeaderPhoto{
+        padding-right: 5%;
+    }
+    .paulNav {
+        position: relative;
+        .paulLogo{
+            font-size: 2em;
+        }
+        .mainLogo{
+            font-size: 1.8em;
+        }
+    }
+    .paulResume{
+        .downloadButton{
+            font-size: 20px;
+        }
+    }
+    .paulTitles{
+        font-size: 27px;
+    }
+}
+@media (max-width: 767px) {
+    .paulMobileBreak{
+        display: block;
+    }
+    .paulHeader {
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        padding: 2%;
+    }
+
+    .paulHeaderLeft {
+        float: none;
+        margin: 0;
+        text-align: center;
+        h1{
+            font-size: 35px;
+        }
+        p{
+            font-size: 19px;
+        }
+    }
+
+    .paulHeaderPhoto {
+        margin-top: 10%;
+        padding-left: 5%;
+        img {
+            width: 300px;
+        }
+    }
+
+    .paulNav {
+        position: relative;
+        .paulLogo{
+            font-size: 2em;
+        }
+        .mainLogo{
+            font-size: 1.8em;
+        }
+    }
+
+    .mainLogo,
+    .paulLogo {
+        padding: 2%;
+        position: static;
+        margin: auto;
+    }
+
+    ul {
+        padding: 2% 0;
+    }
+
+    li {
+        display: list-item;
+        margin: 10px 0;
+    }
+
+    .paulAbout {
+        margin: 5%;
+    }
+
+    .paulLinkedLogos {
+        margin: 5px;
+        svg {
+            font-size: 8vw;
+        }
+        img{
+            height: 8vw;
+        }
+    }
+
+    .paulTechnologies {
+        padding: 5%;
+    }
 }
