--- a/src/frontend/src/styles/Games.scss
+++ b/src/frontend/src/styles/Games.scss
@@ -8,10 +8,12 @@
 
 .articleBox {
   display: flex;
-  margin-bottom: 30px;
+  margin: 15px auto;
   width: 90%;
   a {
-    height: 300px;
+    margin: auto 0;
+    height: 200px;
+    aspect-ratio: 16/9;
   }
   h1 {
     margin-block-start: 0;
@@ -23,10 +25,10 @@
   cursor: pointer;
   object-fit: cover;
   object-position: 50% 50%;
-  width: 300px;
+  position: relative;
+  width: 100%;
+  aspect-ratio: 16/9;
   // max-width: 100%;
-  padding-left: 1%;
-  height: 300px;
 }
 
 .articleText {
@@ -38,6 +40,7 @@
   font-weight: bold;
   font-size: Variables.$md-text;
   font-style: italic;
+  margin: 2px auto;
   svg {
     font-size: Variables.$md-text;
   }
@@ -48,8 +51,8 @@
   margin-block-end: 0;
 }
 .gline {
-  border-width: 10px;
-  width: 80%;
+  border-width: 1px;
+  width: 90%;
   background-color: red;
 }
 
@@ -81,8 +84,38 @@
 }
 
 .vl {
-  border-left: 6px solid black;
-  height: 300px;
-  margin-left: 50px;
-  margin-right: 30px;
+  border-left: 2px solid black;
+  margin: 0 20px;
+}
+
+@media only screen and (max-width: 700px) {
+  .articleBox{
+    flex-direction: column;
+    a {
+      margin: auto;
+      width: 100%;
+      height: auto;
+    }
+  }
+  .vl {
+    border-top: 2px solid black;
+    margin: 10px 0;
+  }
+  .gline {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .articleboxcontainer{
+    h1{
+      font-size: 2rem;
+    }
+  }
+  .articleText{
+    font-size: 1.5rem;
+  }
+  #bottom {
+    font-size: 1.4rem;
+  }
 }
