--- a/src/frontend/src/styles/About.scss
+++ b/src/frontend/src/styles/About.scss
@@ -30,14 +30,12 @@
   border-width: thin;
   flex-direction: column;
   justify-content: center;
-  height: 100%;
-  margin: auto auto auto 1%;
-  width: 47%;
+  height: 20vh;
+  margin: auto;
+  width: 95%;
   display: flex;
-  z-index: 9;
-  position: absolute;
-  left: 0;
-  top: 0;
+  min-height: 150px;
+
 }
 
 .bottomContainer {
@@ -56,10 +54,8 @@
 
 #container {
   align-items: center;
-  height: 40vh;
   justify-content: center;
   margin: auto;
-  min-height: 250px;
   width: 100%;
   position: relative;
   left: 0;
@@ -96,17 +92,17 @@
 .glow-on-hover:before {
   content: "";
   background: linear-gradient(
-    45deg,
-    #ff0000,
-    #353935,
-    #000000,
-    #353437,
-    #ff0000,
-    #353437,
-    #000000,
-    #353935,
-    #1a1a1b,
-    #ff0000
+                  45deg,
+                  #ff0000,
+                  #353935,
+                  #000000,
+                  #353437,
+                  #ff0000,
+                  #353437,
+                  #000000,
+                  #353935,
+                  #1a1a1b,
+                  #ff0000
   );
   position: absolute;
   top: -2px;
@@ -269,13 +265,15 @@
 
 .technologies {
   flex-direction: column;
-  height: 100%;
+  height: 40vh;
   margin: auto;
   min-width: 400px;
   width: 50%;
+  max-height: 200px;
 }
 
 .technologiesTitleFont {
+  margin: 10px 0;
   font-size: calc(14px + 1vw);
   text-align: center;
 }
