--- a/src/frontend/src/styles/Article.scss
+++ b/src/frontend/src/styles/Article.scss
@@ -1,5 +1,11 @@
 @use "Variables";
 
+.articleImages {
+  height: 500px;
+  width: 500px;
+  object-fit: cover;
+}
+
 .backgroundPhotoCont {
   background-color: black;
   height: 60vh;
@@ -287,7 +293,7 @@
     width: 100%;
   }
   .actualArticle {
-    margin: auto;
+    // margin: auto;
     text-align: left;
     width: 100%;
   }
