--- a/src/frontend/src/styles/Article.scss
+++ b/src/frontend/src/styles/Article.scss
@@ -1,9 +1,11 @@
 @use "Variables";
 
 .articleImages {
-  height: 500px;
-  width: 500px;
+  height: 250px;
+  // width: 500px;
   object-fit: cover;
+  max-width: 1000px;
+  margin: 5px;
 }
 
 .backgroundPhotoCont {
@@ -179,7 +181,7 @@
   color: black;
   font-size: calc(20px + 0.5vw);
   font-weight: bold;
-  margin: 0 3%;
+  margin: 0;
 }
 
 .commentsSection {
