--- a/src/frontend/src/styles/Home.scss
+++ b/src/frontend/src/styles/Home.scss
@@ -37,6 +37,7 @@
   box-shadow: 5px 5px lightgray;
   cursor: pointer;
   margin: 2px;
+  // min-height: 200px;
   width: 315px;
   img {
     height: 170px;
@@ -100,14 +101,17 @@
 .releasesList {
   h2 {
     // background-color: blue;
-    color: grey;
+    color: #ff0000;
     text-align: center;
-    padding-left: 5px;
+    padding-left: 5%;
     //border-bottom: 2px solid black;
+  }
+  ul {
+    padding: 5%;
   }
   border-radius: 10px;
   // background-color: #c0c0c082;
-  border: 4px solid blue;
+  // border: 4px solid blue;
   margin-bottom: 30px;
 }
 
@@ -140,41 +144,46 @@
   // width: 250px;
 }
 
-@media screen and (max-width:855px) {
-  .card{
+@media screen and (max-width: 855px) {
+  .card {
     width: 240px;
-    img{
+    img {
       width: 240px;
     }
   }
-  .cardsContainer{
+  .cardsContainer {
     margin-left: 1%;
     border-right: none;
     width: 98%;
     margin-bottom: 5%;
   }
-  .homeContainer{
+  .homeContainer {
     display: block;
   }
-  .releasesList{
+  .releasesList {
     margin-left: 1%;
+    border: 4px solid black;
   }
-  .sidebar{
+  .sidebar {
     width: 90%;
     margin-left: 5%;
-    li{
+    li {
       margin-left: 3%;
     }
   }
 }
 
-@media screen and (max-width:500px) {
-  .card{
+@media screen and (max-width: 500px) {
+  .card {
     width: 150px;
     font-size: 19px;
-    img{
+    img {
       width: 150px;
     }
+  }
+  .releasesList {
+    margin-left: 1%;
+    border: 4px solid black;
   }
 }
 /*
