added photos for my articles and small changes

--- a/src/frontend/src/styles/Article.scss
+++ b/src/frontend/src/styles/Article.scss
@@ -1,5 +1,11 @@
 @use "Variables";
 
+
+.articleIMG{
+  justify-content: center;
+  display: flex;
+}
+
 .articleImages {
   height: 250px;
   // width: 500px;
