--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -26,8 +26,7 @@ body {
 }
 
 .carouselcomponent {
-  padding-left: 2%;
-  padding-right: 2%;
+  padding: 2%;
 }
 .darkmode {
   background-color: black;
