--- a/src/frontend/src/styles/App.scss
+++ b/src/frontend/src/styles/App.scss
@@ -336,7 +336,7 @@ html {
   margin: auto 10px;
 }
 .loginButton {
-  background-color: black;
+  background-color: #3285ff;
   border: none;
   color: white;
   cursor: pointer;
