--- a/src/frontend/src/styles/login.scss
+++ b/src/frontend/src/styles/login.scss
@@ -94,7 +94,7 @@ body {
   height: 40px;
   border: none;
   border-radius: 8px;
-  background-color: #29282b;
+  background-color: #3285ff;
   font-size: 16px;
   cursor: pointer;
 }
